--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
   <title>NYC Zoning Height Restrictions Explorer</title>
-  <link href="style.css" rel="stylesheet" />
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
-</head>
-<body>
- .title-frame {
+  <style>
+    body { margin: 0; padding: 0; font-family: 'Arial', sans-serif; }
+    #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+
+    .title-frame {
       position: absolute;
       top: 20px;
       left: 20px;
@@ -42,75 +43,47 @@
   <p>Explore New York City’s zoning districts and learn about different zoning height restrictions that shape the city.</p>
 </div>
 
-  
-  <h1>NYC Zoning Height Restrictions Explorer</h1>
-  <p>Explore New York City’s zoning districts and learn about different zoning height restrictions that shape the city.</p>
-  <div id="map"></div>
-  <div id="legend"></div>
+<script>
+  // Replace this with your actual Mapbox access token
+  mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN';
 
-  <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiYWgzODYzIiwiYSI6ImNtOWJ2ZzJoMDBreHIyanBuYmFvb3lvam0ifQ.Zeg12vyxmHuz86vEocSGdw';
+  const map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/light-v11',
+    center: [-73.966, 40.772], // Example: Upper East Side
+    zoom: 14
+  });
 
-    
-    const map = new mapboxgl.Map({
-      container: 'map',
-      style: 'mapbox://styles/mapbox/light-v10',
-      center: [-73.935242, 40.730610], // Centered on NYC
-      zoom: 10
+  map.on('load', () => {
+    // Add your GeoJSON source
+    map.addSource('limited-height-zones', {
+      'type': 'geojson',
+      'data': 'limited_height.geojson' // Update this path if needed
     });
 
-    map.on('load', () => {
-      map.addSource('zoning', {
-        type: 'geojson',
-        data: 'data/limited_height.geojson' 
-      });
-
-      // Add a layer to visualize the zoning districts
-      map.addLayer({
-        id: 'zoning-layer',
-        type: 'fill',
-        source: 'zoning',
-        paint: {
-          'fill-color': [
-            'match',
-            ['slice', ['get', 'zoning'], 0, 1],
-            'R', '#3182bd', // Residential
-            'C', '#31a354', // Commercial
-            'M', '#fd8d3c', // Manufacturing
-            '#cccccc'       // Default
-          ],
-          'fill-opacity': 0.6
-        }
-      });
-
-      // Add outline for zoning areas
-      map.addLayer({
-        id: 'zoning-outline',
-        type: 'line',
-        source: 'zoning',
-        paint: {
-          'line-color': '#333',
-          'line-width': 0.5
-        }
-      });
-
-      // Popup on click
-      map.on('click', 'zoning-layer', (e) => {
-        const props = e.features[0].properties;
-        new mapboxgl.Popup()
-          .setLngLat(e.lngLat)
-          .setHTML(`<strong>Zoning Code:</strong> ${props.zoning}<br><strong>Borough:</strong> ${props.borough}`)
-          .addTo(map);
-      });
-
-      // Change cursor on hover
-      map.on('mouseenter', 'zoning-layer', () => {
-        map.getCanvas().style.cursor = 'pointer';
-      });
-      map.on('mouseleave', 'zoning-layer', () => {
-        map.getCanvas().style.cursor = '';
-      });
+    // Fill polygons
+    map.addLayer({
+      'id': 'limited-height-fill',
+      'type': 'fill',
+      'source': 'limited-height-zones',
+      'paint': {
+        'fill-color': '#ff69b4',
+        'fill-opacity': 0.5
+      }
     });
-  </script>
+
+    // Outline
+    map.addLayer({
+      'id': 'limited-height-outline',
+      'type': 'line',
+      'source': 'limited-height-zones',
+      'paint': {
+        'line-color': '#d4007f',
+        'line-width': 2
+      }
+    });
+  });
+</script>
+
 </body>
 </html>
