--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
     .title-frame {
       position: absolute;
       top: 20px;
-      left: 20px;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 15px 20px;
-      border-radius: 8px;
-      max-width: 400px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-      z-index: 1;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255, 255, 255, 0.95);
+      padding: 15px 25px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      z-index: 1000;
     }
 
     .title-frame h1 {
-      font-size: 20px;
-      margin: 0 0 8px;
+      font-size: 18px;
+      margin: 0 0 6px;
     }
 
     .title-frame p {
-      font-size: 14px;
+      font-size: 13px;
       margin: 0;
-      color: #444;
+      color: #555;
     }
   </style>
 </head>
@@ -44,40 +45,36 @@
 </div>
 
 <script>
-  // Replace this with your actual Mapbox access token
-  mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN';
+  mapboxgl.accessToken = 'pk.eyJ1IjoiYWgzODYzIiwiYSI6ImNtOWJ2ZzJoMDBreHIyanBuYmFvb3lvam0ifQ.Zeg12vyxmHuz86vEocSGdw'; // Replace with your token
 
   const map = new mapboxgl.Map({
     container: 'map',
     style: 'mapbox://styles/mapbox/light-v11',
-    center: [-73.966, 40.772], // Example: Upper East Side
+    center: [-73.966, 40.772],
     zoom: 14
   });
 
   map.on('load', () => {
-    // Add your GeoJSON source
     map.addSource('limited-height-zones', {
-      'type': 'geojson',
-      'data': 'limited_height.geojson' // Update this path if needed
+      type: 'geojson',
+      data: 'limited_height.geojson' // Replace with correct path if needed
     });
 
-    // Fill polygons
     map.addLayer({
-      'id': 'limited-height-fill',
-      'type': 'fill',
-      'source': 'limited-height-zones',
-      'paint': {
+      id: 'limited-height-fill',
+      type: 'fill',
+      source: 'limited-height-zones',
+      paint: {
         'fill-color': '#ff69b4',
         'fill-opacity': 0.5
       }
     });
 
-    // Outline
     map.addLayer({
-      'id': 'limited-height-outline',
-      'type': 'line',
-      'source': 'limited-height-zones',
-      'paint': {
+      id: 'limited-height-outline',
+      type: 'line',
+      source: 'limited-height-zones',
+      paint: {
         'line-color': '#d4007f',
         'line-width': 2
       }
