--- a/index.html
+++ b/index.html
@@ -3,35 +3,40 @@
 <head>
   <meta charset="utf-8" />
   <title>NYC Zoning Height Restrictions Explorer</title>
-  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <style>
-    body { margin: 0; padding: 0; font-family: 'Arial', sans-serif; }
-    #map { position: absolute; top: 0; bottom: 0; width: 100%; }
+    body, html { margin: 0; padding: 0; height: 100%; width: 100%; }
+
+    #map {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+    }
 
     .title-frame {
       position: absolute;
       top: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: rgba(255, 255, 255, 0.95);
-      padding: 15px 25px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      background: rgba(255, 255, 255, 0.9);
+      padding: 12px 20px;
+      border-radius: 8px;
       text-align: center;
-      z-index: 1000;
+      z-index: 999;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     }
 
     .title-frame h1 {
       font-size: 18px;
-      margin: 0 0 6px;
+      margin: 0;
     }
 
     .title-frame p {
       font-size: 13px;
-      margin: 0;
-      color: #555;
+      margin: 4px 0 0;
     }
   </style>
 </head>
@@ -41,44 +46,17 @@
 
 <div class="title-frame">
   <h1>NYC Zoning Height Restrictions Explorer</h1>
-  <p>Explore New York City’s zoning districts and learn about different zoning height restrictions that shape the city.</p>
+  <p>Explore NYC’s zoning districts and their height rules.</p>
 </div>
 
 <script>
-  mapboxgl.accessToken = 'pk.eyJ1IjoiYWgzODYzIiwiYSI6ImNtOWJ2ZzJoMDBreHIyanBuYmFvb3lvam0ifQ.Zeg12vyxmHuz86vEocSGdw'; // Replace with your token
+  mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN'; // Replace this
 
   const map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/light-v11',
+    style: 'mapbox://styles/mapbox/streets-v12',
     center: [-73.966, 40.772],
-    zoom: 14
-  });
-
-  map.on('load', () => {
-    map.addSource('limited-height-zones', {
-      type: 'geojson',
-      data: 'limited_height.geojson' // Replace with correct path if needed
-    });
-
-    map.addLayer({
-      id: 'limited-height-fill',
-      type: 'fill',
-      source: 'limited-height-zones',
-      paint: {
-        'fill-color': '#ff69b4',
-        'fill-opacity': 0.5
-      }
-    });
-
-    map.addLayer({
-      id: 'limited-height-outline',
-      type: 'line',
-      source: 'limited-height-zones',
-      paint: {
-        'line-color': '#d4007f',
-        'line-width': 2
-      }
-    });
+    zoom: 12
   });
 </script>
 
