--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </div>
 
 <script>
-  mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN'; // Replace this
+  mapboxgl.accessToken = 'pk.eyJ1IjoiYWgzODYzIiwiYSI6ImNtOWJ2ZzJoMDBreHIyanBuYmFvb3lvam0ifQ.Zeg12vyxmHuz86vEocSGdw'; // Replace this
 
   const map = new mapboxgl.Map({
     container: 'map',
