--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     // Add your GeoJSON source
     map.addSource('limited-height-zones', {
       'type': 'geojson',
-      'data': 'zones.geojson' // Update this path if needed
+      'data': 'limited_height.geojson' // Update this path if needed
     });
     
    // Fill polygons
